Bug 90526 - lowriter -p displays splash screen
Summary: lowriter -p displays splash screen
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
4.1.5.3 release
Hardware: Other All
: medium normal
Assignee: Caolán McNamara
URL: https://bugzilla.suse.com/show_bug.cg...
Whiteboard: target:5.3.0
Keywords: notBibisectable, regression
Depends on:
Blocks:
 
Reported: 2015-04-09 12:08 UTC by Tomáš Chvátal
Modified: 2016-10-25 18:38 UTC (History)
3 users (show)

See Also:
Crash report or crash signature:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Tomáš Chvátal 2015-04-09 12:08:25 UTC
As reported to suse bugzilla here:
https://bugzilla.suse.com/show_bug.cgi?id=881015

The issue is as follows:

when running lowriter -p file.odt it should go to printer without displaying splash-screen.

Manpage snippet:
       -p file...
              Prints the given files to the  default  printer  and  ends.  The
              splash screen does not appear.

The splash-screen is in-fact displayed when you do it. So manpage should be adjusted or better the splash should not show up.

The issue is reproducable on Master and first was reported on 4.1, but might be even longer around.
Comment 1 Buovjaga 2015-04-16 11:16:02 UTC
Reproduced on Linux, but not on Windows.

Version 3.6 does not show splash, so marking as regression.

Win 7 Pro 64-bit, Version: 4.4.2.2
Build ID: c4c7d32d0d49397cad38d62472b0bc8acff48dd6
Locale: fi_FI

Ubuntu 14.10 64-bit 
Version: 4.4.2.2
Build ID: 40m0(Build:2)
Locale: en_US

Version 3.6.7.2 (Build ID: e183d5b)
Comment 2 Matthew Francis 2015-05-09 07:44:01 UTC
The first release version I can see this on is indeed 4.1, but the splash screen is shown for "-p" all the way back to the start of bibisect 43all (i.e. ~3.5.0), so not sure what's going on there. Unfortunately doesn't seem bibisectable.
Comment 3 Robinson Tryon (qubit) 2015-12-10 01:26:18 UTC Comment hidden (obsolete)
Comment 4 Commit Notification 2016-07-09 14:55:54 UTC
Caolán McNamara committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=b05dade3edc9186af0fe093a501eed3d908ded5d

Resolves: tdf#90526 don't show splashscreen for -pt -or -p

It will be available in 5.3.0.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.