Resolves: tdf#90526 don't show splashscreen for -pt -or -p

Change-Id: I64c6d82e3ff738fbc83b00d640765e8863ccd9b6